--- a/style.css
+++ b/style.css
@@ -1,64 +1,128 @@
-.container{
-    margin: 0 auto;
-    max-width: 784px;
-    width: 100%;
-    padding-top: 20px;
-
+*{
+    padding: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
 }
-
-input{
- 
-    width: 595px;
-    height: 38[x];
-    padding-top: 8px;
-    padding-right: 16px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-    gap: 436px;
-    border-radius: 5px;
-    border-width: 1px;
-    
-border: 2px solid #C3C1E5;
-
+body{
+    background-color: #FAFAFA;
 }
-#addTaskButton{
-    width: 64px;
-height: 38px;
-
-border-radius: 5px;
-padding: 10px;
-background-color: #6C63FF;
-border: none;
-color: white;
-
-}
-
-.dark-theme {
-background-color: #1e1e1e;
-color: white;
-}
-
-.theme-button{
-    width: 38px;
-height: 38px;
-left: 691px;
-border-radius: 5px;
-color: white;
-background-color: #6C63FF;
-
-}
-h2{
+nav{
+    height: 140px;
+    background-color: white;
     display: flex;
-    width: 122px;
-height: 39px ;
-font-family: 'Kanit';
-font-weight: 500;
-font-size: 22px;
-margin: auto;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 3px 2px 2px #DEDBDB;
+}
+.icons{
+    display: flex;
+    align-items: center
+}
+.icons img{
+    margin-right: 30px;
+    display: flex;
+}
+.box{
+    width: 650px;
+    height: 786px;
+    border: 1px solid #DEDBDB;
+    border-radius: 50px;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.box_top{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 50px;
+}
+.exit{
+    display: flex;
+    
+    align-items: center;
+    
+}
+.exit p{
+    margin-right: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #f0400f;
+}
+.Spacega{
+    font-size: 48px;
+    text-align: center;
+    color: #0E0D5D;
+    padding-top: 100px;
+    margin-bottom:00px;
+}
+.items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    background-color: #f5f5f5;
+    width: 533px;
+    height: 70px;
+    border-radius: 20px;
+    margin: auto;
+    margin-bottom: 100px;
+}
+.student{
+    width: 255px;
+    height: 54px;
+    background-color: white;
+    border-radius:15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.student p{
+    font-size: 28px;
+}
+.perent{
+    color: #757575;
+    font-size: 28px;
 
 }
-.photo{
-position: relative;
-right: 40px;
-bottom: -5px;
+input{
+    border-radius: 20px;
+    width: 533px;
+    height: 70px;
+    padding: 40px;
+    margin-top: 30px;
+    font-size: 20px;
+    
+}
+h3{
+   width: 243px;
+   height: 33px;
+   margin-left: 170px;
+}
+button{
+    margin-left: 380px;
+    width: 170px;
+    height: 50px;
+    border-radius: 20px;
+    background-color: #F69E86;
+    border: 1px solid white;
+    margin-top: -20px;
+    color: #FAFAFA;
+}
+button a{
+    color: #f0400f;
+}
+.eye-icon {
+    display: flex;
+    margin-right: 410px;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    margin-top: -50px;
 }
